<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">AU-X</string>
    <string name="dcloud_Init_fail_tips">Application configuration error detected, please modify according to the document configuration</string>
    <string name="dcloud_ad_error_code_200000">Ad not filled</string>
    <string name="dcloud_ad_error_code_5001">adpid is null</string>
    <string name="dcloud_ad_error_code_5002">Invalid \"adpid\",current:</string>
    <string name="dcloud_ad_error_code_5003">No ads in the current slot,please ensure that the current ad slot is approved</string>
    <string name="dcloud_ad_error_code_5004">No ads module,please configure the corresponding module when packaging</string>
    <string name="dcloud_ad_error_code_5005">Ad loading failed,please try again later</string>
    <string name="dcloud_ad_error_code_5006">The ad has already been shown, please reload</string>
    <string name="dcloud_ad_error_code_5007">Configuration get failed</string>
    <string name="dcloud_ad_error_code_5008">The ad is unavailable or has expired, please request again</string>
    <string name="dcloud_ad_error_code_5011">The ad type does not match, please check and try again</string>
    <string name="dcloud_ad_error_code_5012">No ad modules were found that support this type</string>
    <string name="dcloud_ad_error_code_5013">Ad playback failed, please try again later</string>
    <string name="dcloud_ad_error_code_5014">Parameters cannot be empty</string>
    <string name="dcloud_ad_error_code_5015">Other errors, please try again</string>
    <string name="dcloud_ad_error_code_5016">Please init first</string>
    <string name="dcloud_ad_error_code_5017">The load did not complete, please try again later</string>
    <string name="dcloud_ad_error_code_5018">Ad load times out, please try again later</string>
    <string name="dcloud_ad_error_code_5019">Current configuration cannot be resolved</string>
    <string name="dcloud_ad_error_code_5020">The hierarchy configuration was not obtained</string>
    <string name="dcloud_ad_error_code_5021">The ad is showing</string>
    <string name="dcloud_ad_error_code_5022">App open ad is Closed</string>
    <string name="dcloud_ad_error_code_5100">Other errors, mediation networks error</string>
    <string name="dcloud_ad_error_code_603">Time out</string>
    <string name="dcloud_ad_tag_ad">Ad</string>
    <string name="dcloud_ad_tag_skip">Skip</string>
    <string name="dcloud_audio_abnormal_rebuild">the playback is abnormal and needs to be recreated</string>
    <string name="dcloud_audio_no_mp3_module_added">no recording support mp3 format file module is added when packaging, please refer to</string>
    <string name="dcloud_audio_not_aac_recording">the current system does not support AAC recording!</string>
    <string name="dcloud_audio_not_mp3_recording">the current application configuration does not support mp3</string>
    <string name="dcloud_audio_play_error">file playback format error</string>
    <string name="dcloud_audio_timeout">file request timed out</string>
    <string name="dcloud_base_debug_wgt_not_confusion">The custom base package does not support encryption obfuscated WGT or WGTU</string>
    <string name="dcloud_choose_an_action">Choose an action</string>
    <string name="dcloud_common_allow">allow</string>
    <string name="dcloud_common_app_check_failed">verification failed!</string>
    <string name="dcloud_common_app_not_installed">the client is not installed</string>
    <string name="dcloud_common_app_not_oaid">no OAID-related functionality is integrated</string>
    <string name="dcloud_common_app_open_now">"application, 
 opens immediately?"</string>
    <string name="dcloud_common_app_res_download_failed">, application resource download failed!</string>
    <string name="dcloud_common_app_target_tips">targetSdkVersion does not support the current path on Android10+ system devices after setting >=29. Please change to the application run path! Please see:https://ask.dcloud.net.cn/article/36199</string>
    <string name="dcloud_common_app_test_tips">the current application is a developer test version, which has not been reviewed and may have security risks</string>
    <string name="dcloud_common_app_tips1" formatted="false">this application is compiled using HBuilderX %s or the corresponding CLI version, while the mobile SDK version is %s. Mismatching versions can cause an application exception</string>
    <string name="dcloud_common_app_tips2">the current environment cannot run uni-app applications with Custom Component Mode enabled!</string>
    <string name="dcloud_common_app_trust_tips">trust the application without prompting</string>
    <string name="dcloud_common_cancel">cancel</string>
    <string name="dcloud_common_certificate_continue">there is a problem with this sites security certificate. Do you want to continue?</string>
    <string name="dcloud_common_close">close</string>
    <string name="dcloud_common_copy_clipboard">copy to clipboard</string>
    <string name="dcloud_common_copy_link">copy the link</string>
    <string name="dcloud_common_download">download</string>
    <string name="dcloud_common_download_complete">download completes</string>
    <string name="dcloud_common_download_do_file">download or not</string>
    <string name="dcloud_common_download_failed">download failed</string>
    <string name="dcloud_common_download_tips1">the download has started, and the installation interface will be opened automatically after completion</string>
    <string name="dcloud_common_download_tips2">continuing with a previously unfinished download</string>
    <string name="dcloud_common_download_tips3">installing the app you downloaded earlier</string>
    <string name="dcloud_common_exit">exit</string>
    <string name="dcloud_common_fail">fail</string>
    <string name="dcloud_common_file_not_exist">file does not exist</string>
    <string name="dcloud_common_ignore">ignore</string>
    <string name="dcloud_common_in_the_buffer">loading</string>
    <string name="dcloud_common_inside_error">business internal error</string>
    <string name="dcloud_common_into">into</string>
    <string name="dcloud_common_missing_parameter">missing business parameter configuration</string>
    <string name="dcloud_common_msg_unread_prompt">you have %s unread messages</string>
    <string name="dcloud_common_no_allow">dont allow</string>
    <string name="dcloud_common_no_network_tips">device detected no network, please check the system network Settings!</string>
    <string name="dcloud_common_not_sd_card">, no SD card!</string>
    <string name="dcloud_common_not_supported">this feature is not supported</string>
    <string name="dcloud_common_ok">ok</string>
    <string name="dcloud_common_open">open</string>
    <string name="dcloud_common_open_browser">open it in a browser</string>
    <string name="dcloud_common_open_web">open the web page</string>
    <string name="dcloud_common_parameter_error">parameter error</string>
    <string name="dcloud_common_press_again_tips1">press the back key again to close the application</string>
    <string name="dcloud_common_press_again_tips2">press the back key again to close</string>
    <string name="dcloud_common_refresh">refresh</string>
    <string name="dcloud_common_retry">retry</string>
    <string name="dcloud_common_run_app_failed">failed to enter application</string>
    <string name="dcloud_common_safety_warning">safety warning</string>
    <string name="dcloud_common_screenshot_blank">the screenshot is white</string>
    <string name="dcloud_common_screenshot_fail">screenshots failed</string>
    <string name="dcloud_common_sd_not_space">, SD card space is insufficient!</string>
    <string name="dcloud_common_search">search</string>
    <string name="dcloud_common_set_network">configure network</string>
    <string name="dcloud_common_set_up">set</string>
    <string name="dcloud_common_setting_download_failed">, configuration file download failed!</string>
    <string name="dcloud_common_share">share</string>
    <string name="dcloud_common_share_page">share the page</string>
    <string name="dcloud_common_soon_open">is about to open</string>
    <string name="dcloud_common_tips">prompt</string>
    <string name="dcloud_common_unknown_error">an unknown error</string>
    <string name="dcloud_common_user_cancel">user cancelled</string>
    <string name="dcloud_gallery_edit">Edit</string>
    <string name="dcloud_gallery_edit_image_all_photo">All Photos</string>
    <string name="dcloud_gallery_edit_image_cancel">Cancel</string>
    <string name="dcloud_gallery_edit_image_clip">Clip</string>
    <string name="dcloud_gallery_edit_image_done">Done</string>
    <string name="dcloud_gallery_edit_image_mosaic_tip">Please draw on the picture</string>
    <string name="dcloud_gallery_edit_image_original">Full Image</string>
    <string name="dcloud_gallery_edit_image_preview">Preview</string>
    <string name="dcloud_gallery_edit_image_reset">Restore</string>
    <string name="dcloud_gallery_edit_image_rotate">Rotate</string>
    <string name="dcloud_gallery_edit_image_text">Text</string>
    <string name="dcloud_gallery_edit_image_undo">Undo</string>
    <string name="dcloud_gallery_select">Select</string>
</resources>