<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <android.support.v7.widget.RecyclerView android:id="@id/rv_images" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <FrameLayout android:id="@id/layout_footer" android:background="@color/image_color_primary" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_gravity="center_vertical" android:id="@id/tv_album_folder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dcloud_gallery_edit_image_all_photo" />
            <CheckBox android:layout_gravity="center" android:id="@id/cb_original" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dcloud_gallery_edit_image_original" />
            <TextView android:layout_gravity="end|center" android:id="@id/tv_preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dcloud_gallery_edit_image_preview" />
        </FrameLayout>
    </LinearLayout>
    <ViewStub android:id="@id/vs_tips_stub" android:layout="@layout/image_inc_gallery_request_permission" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>