<?xml version="1.0" encoding="utf-8"?>
<io.dcloud.feature.gallery.imageedit.view.WindowInsertLinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/dcloud_image_edit_head" android:background="@drawable/image_bg_top" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="top" android:id="@id/tv_cancel" android:focusable="true" android:clickable="true" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="12.0dip" android:src="@mipmap/dcloud_gallery_edit_back" android:onClick="onClick" android:layout_marginStart="20.0dip" />
    </FrameLayout>
    <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:id="@id/dcloud_image_edit_foot" android:background="@drawable/image_bg_bottom" android:paddingTop="16.0dip" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_op_sub" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ViewSwitcher android:id="@id/vs_op_sub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:measureAllChildren="true">
                <io.dcloud.feature.gallery.imageedit.view.IMGColorGroup android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/cg_colors" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checkedButton="@id/cr_red">
                    <io.dcloud.feature.gallery.imageedit.view.IMGColorRadio android:id="@id/cr_white" android:layout_width="@dimen/image_color" android:layout_height="@dimen/image_color" android:layout_margin="@dimen/image_color_margin" app:image_color="@color/image_color_white" />
                    <io.dcloud.feature.gallery.imageedit.view.IMGColorRadio android:layout_width="@dimen/image_color" android:layout_height="@dimen/image_color" android:layout_margin="@dimen/image_color_margin" app:image_color="@color/image_color_black" />
                    <io.dcloud.feature.gallery.imageedit.view.IMGColorRadio android:id="@id/cr_red" android:layout_width="@dimen/image_color" android:layout_height="@dimen/image_color" android:layout_margin="@dimen/image_color_margin" app:image_color="@color/image_color_red" />
                    <io.dcloud.feature.gallery.imageedit.view.IMGColorRadio android:layout_width="@dimen/image_color" android:layout_height="@dimen/image_color" android:layout_margin="@dimen/image_color_margin" app:image_color="@color/image_color_yellow" />
                    <io.dcloud.feature.gallery.imageedit.view.IMGColorRadio android:layout_width="@dimen/image_color" android:layout_height="@dimen/image_color" android:layout_margin="@dimen/image_color_margin" app:image_color="@color/image_color_green" />
                    <io.dcloud.feature.gallery.imageedit.view.IMGColorRadio android:layout_width="@dimen/image_color" android:layout_height="@dimen/image_color" android:layout_margin="@dimen/image_color_margin" app:image_color="@color/image_color_blue" />
                    <io.dcloud.feature.gallery.imageedit.view.IMGColorRadio android:layout_width="@dimen/image_color" android:layout_height="@dimen/image_color" android:layout_margin="@dimen/image_color_margin" app:image_color="@color/image_color_purple" />
                </io.dcloud.feature.gallery.imageedit.view.IMGColorGroup>
                <TextView android:textSize="12.0sp" android:textColor="@color/image_color_white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dcloud_gallery_edit_image_mosaic_tip" />
            </ViewSwitcher>
            <ImageButton android:id="@id/btn_undo" android:background="@null" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="6.0dip" android:src="@drawable/image_btn_undo" android:scaleType="center" android:onClick="onClick" android:contentDescription="@string/dcloud_gallery_edit_image_undo" />
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/rg_modes" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@id/rb_doodle" android:background="@mipmap/dcloud_gallery_edit_doodle" android:layout_width="28.0dip" android:layout_height="28.0dip" android:button="@null" android:onClick="onClick" />
                <Space android:layout_width="@dimen/image_mode_space" android:layout_height="wrap_content" />
                <ImageButton android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_text" android:background="@null" android:layout_width="28.0dip" android:layout_height="28.0dip" android:src="@mipmap/dcloud_gallery_edit_text" android:scaleType="fitXY" android:onClick="onClick" android:contentDescription="@string/dcloud_gallery_edit_image_text" />
                <Space android:layout_width="@dimen/image_mode_space" android:layout_height="wrap_content" />
                <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@id/rb_mosaic" android:background="@mipmap/dcloud_gallery_edit_mosaic" android:layout_width="28.0dip" android:layout_height="28.0dip" android:button="@null" android:onClick="onClick" />
                <Space android:layout_width="@dimen/image_mode_space" android:layout_height="wrap_content" />
                <ImageButton android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_clip" android:background="@null" android:layout_width="28.0dip" android:layout_height="28.0dip" android:src="@mipmap/dcloud_gallery_edit_clip" android:scaleType="fitXY" android:onClick="onClick" android:contentDescription="@string/dcloud_gallery_edit_image_clip" />
            </RadioGroup>
            <TextView android:textSize="14.0sp" android:textColor="@color/image_color_white" android:layout_gravity="end|center|top" android:id="@id/tv_done" android:background="@drawable/image_btn_finish" android:paddingLeft="16.0dip" android:paddingTop="6.0dip" android:paddingRight="16.0dip" android:paddingBottom="6.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dcloud_gallery_edit_image_done" android:layout_centerVertical="true" android:onClick="onClick" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</io.dcloud.feature.gallery.imageedit.view.WindowInsertLinearLayout>